--- a/StudyLayout/weatherViewController.storyboard
+++ b/StudyLayout/weatherViewController.storyboard
@@ -16,19 +16,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="天気情報" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3G1-FF-bc6">
-                                <rect key="frame" x="162" y="124" width="69.333333333333314" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nma-I0-XDT" userLabel="タイトル">
-                                <rect key="frame" x="83" y="173" width="227" height="43"/>
+                                <rect key="frame" x="83" y="167" width="227" height="43"/>
                                 <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="43" id="2Pq-Kc-koF"/>
                                     <constraint firstAttribute="width" constant="227" id="wMt-ek-ClN"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="東京の天気情報" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3G1-FF-bc6">
+                                <rect key="frame" x="97" y="118" width="199" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -39,10 +39,10 @@
                         <constraints>
                             <constraint firstItem="nma-I0-XDT" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="83" id="1w6-Lo-puM"/>
                             <constraint firstItem="nma-I0-XDT" firstAttribute="top" secondItem="3G1-FF-bc6" secondAttribute="bottom" constant="28" id="3XE-SP-UdW"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="3G1-FF-bc6" secondAttribute="trailing" constant="161.66999999999999" id="P4F-0Z-nit"/>
-                            <constraint firstItem="3G1-FF-bc6" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="162" id="POo-2A-hiI"/>
+                            <constraint firstItem="3G1-FF-bc6" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="59" id="EeB-eO-jbu"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="3G1-FF-bc6" secondAttribute="trailing" constant="97" id="LV0-Hn-Snm"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="nma-I0-XDT" secondAttribute="trailing" constant="83" id="cfV-mB-yXj"/>
-                            <constraint firstItem="3G1-FF-bc6" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="65" id="zaw-cD-nET"/>
+                            <constraint firstItem="3G1-FF-bc6" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="97" id="sr1-kJ-0Kp"/>
                         </constraints>
                     </view>
                     <connections>
