--- a/StudyLayout/realmViewController.storyboard
+++ b/StudyLayout/realmViewController.storyboard
@@ -60,6 +60,9 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="登録"/>
+                                <connections>
+                                    <action selector="addAllFormValueButtonTap:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Lyf-jE-usu"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PER-gz-3x3">
                                 <rect key="frame" x="167" y="607" width="59" height="35"/>
