--- a/StudyLayout/realmViewController.storyboard
+++ b/StudyLayout/realmViewController.storyboard
@@ -69,6 +69,9 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="抽出"/>
+                                <connections>
+                                    <action selector="extractionButtonTap:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="6zf-Ap-1G7"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UL3-Jo-Jqf" userLabel="年齢出力">
                                 <rect key="frame" x="192" y="662" width="80" height="25"/>
